<resources>
    <string name="app_name">DB Skin Image Sender</string>

    <string name="optic_number">Optic Number</string>
    <string name="enter_optic_number">Enter Optic Number</string>
    <string name="enter_optic_number_label">( Please, type Optic Number of the device you have. Optic Number is written on the device, usually starting from DVA or FAB etc. Please put all the letters and numbers. Optic number is very important information, so it must be correctly typed, otherwise you may experience wrong analysis or face difficulty on device activation. \n Example: DVAA1234 / FAB12345</string>
    <string name="device_optional">Device (Optional)</string>
    <string name="enter_ssid_serial_number">Enter SSID or Serial Number</string>
    <string name="enter_ssid_serial_number_label">(You can find out the SSID or Serial Number on the label of the device.)</string>
    <string name="bm_id">BM ID</string>
    <string name="email_address">E-MAIL</string>
    <string name="please_input_email">(Please input your email.)</string>
    <string name="confirm_bm_id">Confirm BM ID</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_email_address_phone_number_label">(Please, type Email address or phone number. Please, put phone number after selecting the country code. The Email/Phone number will be used as user ID for the future program, and we will provide important information including license keys, and announcement contents.)</string>
    <string name="brand_optional">Brand (Optional)</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="country_code">C. Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="colon_mark">:</string>
    <string name="asterisk_mark">*</string>
    <string name="brand_label_description">(Please write brand name if you are working with specific brand. If you are not working with brand, please, leave it empty.)</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">First Fragment</string>

    <string name="image_sender_crash_log">Image Sender Crash Log</string>
    <string name="application_error">Application error occurred. A report will be sent to the developers.</string>

    <string name="btnok">OK</string>
    <string name="notice_title">NOTICE</string>
    <string name="turnon_internet_upload_image">Please turn on internet to upload image.</string>
    <string name="no_remaining_image_to_upload">No remaining image to upload.</string>

    <string name="exist_send_image_files">Press SEND to send the image(s).\n(It may takes a few minutes.).\nTotal Images found: </string>
    <string name="not_exist_send_image_files">No images(s) to save.</string>

    <string name="upload_image">Upload Images</string>
    <string name="upload">Upload</string>

    <string name="cancel_btn">Cancel</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="fill_up_necessary_fields">Please fill up necessary fields!</string>
    <string name="should_match_bmid">BM ID and Confirm BM ID must match!</string>
    <string name="total_uploaded">Total image uploaded: </string>
    <string name="email_address_or_phone_required">Entering email address or phone number is required.</string>
    <string name="email_address_required">Entering email address.</string>

    <string name="the_backup_file" translatable="false">The backup file does not exist.</string>

    <string name="backup_file_already_uploaded">Backup file was already uploaded!</string>
</resources>