<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/optic_number"
            android:gravity="start|center"
            android:textColor="@color/BLACK"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_1"
            app:layout_constraintTop_toTopOf="@id/editText_OpticNumber"
            app:layout_constraintBottom_toBottomOf="@id/editText_OpticNumber"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_OpticNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            style="@style/edit_text_style"
            android:hint="@string/enter_optic_number"
            android:gravity="start|center"
            android:padding="10dp"
            android:maxLength="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_3"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal_2"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_enter_optic_number_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_optic_number_label"
            android:gravity="start|center"
            android:textSize="@dimen/base_text_size"
            android:layout_marginTop="@dimen/spacer_margin"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_3"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintTop_toBottomOf="@id/editText_OpticNumber"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:gravity="start|center"
            android:textColor="@color/BLACK"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_1"
            app:layout_constraintTop_toTopOf="@id/editText_BMID"
            app:layout_constraintBottom_toBottomOf="@id/editText_BMID"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_BMID"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="50dp"
            android:padding="10dp"
            android:layout_marginTop="@dimen/spacer_margin_top"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_3"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintTop_toBottomOf="@id/label_enter_optic_number_description"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/asterisk_mark"
            android:textColor="@color/RED"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical_3"
            app:layout_constraintTop_toTopOf="@id/editText_BMID"
            app:layout_constraintBottom_toBottomOf="@id/editText_BMID"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_input_email"
            android:gravity="start|center"
            android:textColor="@color/DIM_GREY"
            android:textSize="@dimen/base_text_size"
            android:layout_marginTop="@dimen/spacer_margin"
            app:layout_constraintStart_toStartOf="@id/editText_BMID"
            app:layout_constraintEnd_toEndOf="@id/editText_BMID"
            app:layout_constraintTop_toBottomOf="@id/editText_BMID"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/close"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/label_input_email"
            app:layout_constraintEnd_toStartOf="@id/btnSend"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/send"
            android:textAllCaps="false"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/btnClose"
            app:layout_constraintTop_toTopOf="@id/btnClose"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/colon_mark"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_1"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_2"
            app:layout_constraintTop_toTopOf="@id/editText_OpticNumber"
            app:layout_constraintBottom_toBottomOf="@id/editText_OpticNumber"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/asterisk_mark"
            android:textColor="@color/RED"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical_3"
            app:layout_constraintTop_toTopOf="@id/editText_OpticNumber"
            app:layout_constraintBottom_toBottomOf="@id/editText_OpticNumber"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/colon_mark"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_1"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_2"
            app:layout_constraintTop_toTopOf="@id/editText_BMID"
            app:layout_constraintBottom_toBottomOf="@id/editText_BMID"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.22"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.95"
            android:orientation="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>